[Create Job] Data Inputs: Add auto-completion on edit

--- a/src/common/Combobox/combobox.scss
+++ b/src/common/Combobox/combobox.scss
@@ -9,6 +9,35 @@
   align-items: center;
   width: 100%;
 
+  &-input {
+    background-color: transparent;
+    border: none;
+
+    &-edit {
+      width: 100%;
+      height: 40px;
+      border: 1px solid rgba(0, 0, 0, 0.2);
+
+      &-required {
+        border: 1px solid $amaranth;
+      }
+
+      .input-row__item {
+        .combobox-dropdown_visible {
+          .combobox-dropdown__search {
+            &-input {
+              border: none;
+            }
+          }
+        }
+      }
+
+      .combobox-input {
+        padding: 10px 0;
+      }
+    }
+  }
+
   &-list {
     min-width: 140px;
     margin: 0;
